added layout details => type of deposit and select logic

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,15 @@
+@import './sass/utils/main';
+@import './sass/base/main';
+@import './sass/layout/main';
+@import './sass/components/main';
 /*
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+// @import './example';
+
+svg {
+  fill: tomato
+}
