added footer markup and started to writing styles

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,20 @@
-<article class="footer">
-  <h2>Footer</h2>
+<article>
+  <section class="footer">
+    <ul class="list">
+      <li class="list__item">
+        <p>Investment</p>
+        <p>10, 000 PLN</p>
+      </li>
+      <li class="list__item">
+        <p>Profit percentage</p>
+        <p>91.5 %</p>
+      </li>
+      <li class="list__item"></li>
+    </ul>
+    <div class="list__item return__investment">
+      <p>Return on investment</p>
+      <p>9,150 PLN</p>
+    </div>
+    <button type="button" class="footer__btn">Invest now</button>
+  </section>
 </article>
