--- a/src/sass/layout/_details.scss
+++ b/src/sass/layout/_details.scss
@@ -1,6 +1,7 @@
 .deposit__details {
   @extend .container;
   padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 
@@ -215,6 +216,7 @@
 
   .end__investment {
     margin-top: 40px;
+
   }
 
   .datepicker {
