finished selected type of deposit and current currency logics

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,19 +2,19 @@
   <section class="footer">
     <ul class="list">
       <li class="list__item">
-        <p>Investment</p>
-        <p>10, 000 PLN</p>
+        <h2 class="title">Investment</h2>
+        <p class="amount js-currentAmount">10, 000 <span class="js-currentCurrency">PLN</span></p>
       </li>
       <li class="list__item">
-        <p>Profit percentage</p>
-        <p>91.5 %</p>
+        <h2 class="title">Profit percentage</h2>
+        <p class="percent">91.5 %</p>
       </li>
       <li class="list__item"></li>
     </ul>
     <div class="list__item return__investment">
-      <p>Return on investment</p>
-      <p>9,150 PLN</p>
+      <h2 class="title">Return on investment</h2>
+      <p class="sum">9,150 <span class="js-currentCurrency">PLN</span></p>
     </div>
-    <button type="button" class="footer__btn">Invest now</button>
+    <button type="button" class="button">Invest now</button>
   </section>
 </article>
