--- a/src/sass/layout/_details.scss
+++ b/src/sass/layout/_details.scss
@@ -16,6 +16,9 @@
     border-radius: 9px;
 
     cursor: pointer;
+
+
+
   }
 
   .select-value {
@@ -84,7 +87,7 @@
 
   }
 
-  .currency__button.current {
+  .currency__button--current {
     padding-bottom: 7px;
     border-bottom: 3px solid $accent-color;
     color: $accent-color;
@@ -103,6 +106,10 @@
   .input-box {
     position: relative;
     margin-top: 7px;
+
+    .range {
+      display: none;
+    }
 
     .input {
       width: 100%;
@@ -137,6 +144,7 @@
   margin-top: 40px;
 
   .input-box {
+
 
     .input {
       width: 100%;
@@ -216,7 +224,11 @@
 
   .end__investment {
     margin-top: 40px;
+  }
 
+  .end__investment .datepicker {
+
+    color: $text-color--secondary;
   }
 
   .datepicker {
@@ -229,5 +241,115 @@
     border-radius: 9px;
 
     outline: none;
+
   }
+}
+
+
+
+@media screen and (min-width:480px) {
+  .type {
+    .type__select {
+      width: 280px;
+    }
+  }
+
+  .currency {
+    width: 255px;
+  }
+
+  .amount__investment {
+    .input-box {
+      display: flex;
+      justify-content: space-between;
+
+      font-size: 14px;
+
+      .range {
+        display: block;
+        width: 240px;
+      }
+
+      .input {
+        width: 160px;
+      }
+    }
+  }
+
+  .term__investment {
+    w .input-box {
+
+
+      .input {
+        width: 100%;
+        margin-top: 15px;
+      }
+
+      .tickmarks__list {
+        display: flex;
+
+        color: $border-color;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+
+      }
+
+      .tickmarks__list :nth-child(2) {
+        margin-left: 20px;
+      }
+
+      .tickmarks__list :nth-child(3) {
+        margin-left: 17px;
+      }
+
+      .tickmarks__list :nth-child(1n+4) {
+        margin-left: 16px;
+
+      }
+
+      .tickmarks__list :nth-child(10) {
+        margin-left: 13px;
+      }
+
+      .tickmarks__list :nth-child(11) {
+        margin-left: 9px;
+      }
+
+      .tickmarks__list :nth-child(12) {
+        margin-left: 9px;
+      }
+
+
+    }
+
+    .interest__rate {
+
+      margin-top: 43px;
+      padding-top: 22px;
+      padding-bottom: 22px;
+      background-color: $bg-color;
+
+      border-radius: 15px;
+
+      text-align: center;
+
+      .rate {
+        margin-top: 10px;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 28px;
+
+        color: $text-color--main;
+      }
+
+      .span {
+        font-size: 14px;
+        line-height: 16px;
+        color: $text-color--secondary;
+      }
+    }
+  }
+
+
 }
