installed jquery datepicker

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -6,7 +6,7 @@
         <h2 class="title">Type of deposit</h2>
         <div class="type__select">
           <div class="select-value">
-            <span class="select-title select-current">Standard</span
+            <span class="select-title select-current"></span
             ><svg class="select-icon" width="24" height="24">
               <use xlink:href="images/icon/sprite.svg#icon-expand" />
             </svg>
@@ -40,9 +40,9 @@
       <div class="amount__investment">
         <h2 class="title">Amount of investment</h2>
         <div class="input-box">
-          <input class="range js__amount-range" type="range" />
-          <input class="input js__amount-input" type="text" placeholder="amount" /><span
-            class="input__currency js-currentCurrency"
+          <input class="range js__amount-range" value="0" min="0" max="100000" type="range" />
+          <input class="input js__amount-input" type="text" placeholder="0" /><span
+            class="input__currency js__currentCurrency"
             >PLN</span
           >
         </div>
@@ -50,7 +50,14 @@
       <div class="term__investment">
         <div class="input-box">
           <label class="title"
-            >Investment term (Months) <input class="input" type="range" min="1" max="12" step="1"
+            >Investment term (Months)
+            <input
+              class="input js__term-investment"
+              type="range"
+              min="1"
+              max="12"
+              step="1"
+              value="1"
           /></label>
           <ul class="tickmarks__list">
             <li class="tickmarks__item">1</li>
@@ -69,19 +76,25 @@
         </div>
         <div class="interest__rate">
           <h2 class="title">Interest rate</h2>
-          <p class="rate">0.75% <span class="span">in a day</span></p>
+          <p class="rate js__rate">
+            <span class="js__interest-rate">0.75%</span> <span class="span">in a day</span>
+          </p>
         </div>
       </div>
       <div class="period__investment">
         <div class="start__investment">
           <label class="title"
-            >Start of investment <input type="date" class="datepicker" autocomplete="off"
-          /></label>
+            >Start of investment
+            <input type="date" class="datepicker js__datepicker-start" autocomplete="off" />
+            <input type="text" class="datepicker js__datepicker-start" />
+          </label>
         </div>
         <div class="end__investment">
           <label class="title"
-            >End of investment <input type="date" class="datepicker end" autocomplete="off"
-          /></label>
+            >End of investment
+            <input type="date" class="datepicker js__datepicker-end" autocomplete="off" />
+            <input type="text" class="datepicker js__datepicker-end" />
+          </label>
         </div>
       </div>
     </form>
