--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,10 @@
     <ul class="list">
       <li class="list__item">
         <h2 class="title">Investment</h2>
-        <p class="amount js-currentAmount">10, 000 <span class="js-currentCurrency">PLN</span></p>
+        <p class="amount">
+          <span class="js__current-investment">0</span>
+          <span class="js__current-currency">PLN</span>
+        </p>
       </li>
       <li class="list__item">
         <h2 class="title">Profit percentage</h2>
@@ -13,7 +16,7 @@
     </ul>
     <div class="list__item return__investment">
       <h2 class="title">Return on investment</h2>
-      <p class="sum">9,150 <span class="js-currentCurrency">PLN</span></p>
+      <p class="sum">9,150 <span class="js__current-currency">PLN</span></p>
     </div>
     <button type="button" class="button">Invest now</button>
   </section>
