--- a/src/sass/layout/_details.scss
+++ b/src/sass/layout/_details.scss
@@ -220,7 +220,7 @@
 .period__investment {
   margin-top: 40px;
 
-  .start__investment {}
+  // .start__investment {}
 
   .end__investment {
     margin-top: 40px;
@@ -244,7 +244,6 @@
 
   }
 }
-
 
 
 @media screen and (min-width:480px) {
