transfer  result on investment in localStorage

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -81,22 +81,20 @@
           </p>
         </div>
       </div>
-      <div class="period__investment">
+      <!-- <div class="period__investment">
         <div class="start__investment">
           <label class="title"
             >Start of investment
-            <input type="date" class="datepicker js__datepicker-start" autocomplete="off" />
-            <input type="text" class="datepicker js__datepicker-start" />
+            <input type="text" class="datepicker js__datepicker-start" id="datepicker-start" />
           </label>
         </div>
         <div class="end__investment">
           <label class="title"
             >End of investment
-            <input type="date" class="datepicker js__datepicker-end" autocomplete="off" />
-            <input type="text" class="datepicker js__datepicker-end" />
+            <input type="text" class="datepicker js__datepicker-end" id="datepicker-end" />
           </label>
         </div>
-      </div>
+      </div> -->
     </form>
   </section>
 </article>
