finished logic localStorage

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -20,9 +20,7 @@
       </div>
       <ul class="currency">
         <li class="currency__item">
-          <button type="button" class="currency__button currency__button--current" data-value="PLN">
-            PLN
-          </button>
+          <button type="button" class="currency__button" data-value="PLN">PLN</button>
         </li>
         <li class="currency__item">
           <button type="button" class="currency__button" data-value="UAH">UAH</button>
