--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -3,4 +3,17 @@
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+
+
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+
+  @media screen and (min-width:640px) {
+    max-width: 640px;
+  }
+
+
+
+
 }
