--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,3 +1,3 @@
-@import './header';
-@import './details';
-@import './footer'
+@import './mobile_360/main.scss';
+@import './mobile_480/main.scss';
+@import './mobile_640/main.scss';
