--- a/src/sass/layout/mobile_360/_details.scss
+++ b/src/sass/layout/mobile_360/_details.scss
@@ -16,6 +16,7 @@
     border-radius: 9px;
 
     cursor: pointer;
+    z-index: 999;
 
 
 
@@ -46,10 +47,12 @@
     padding: 10px 0px 10px 20px;
     background-color: #ffffff;
 
+
     @extend .select-title;
 
     .select-item:not(:first-child) {
       margin-top: 10px;
+
     }
 
     .select-item:hover {
@@ -58,6 +61,8 @@
 
     &.is-active {
       display: none !important;
+
+
     }
   }
 
@@ -146,9 +151,11 @@
   .input-box {
 
 
+
     .input {
-      width: 100%;
+      width: 280px;
       margin-top: 15px;
+      align-items: center;
     }
 
     .tickmarks__list {
@@ -158,11 +165,12 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 18px;
+      margin-left: 4px;
 
     }
 
     .tickmarks__list :nth-child(2) {
-      margin-left: 20px;
+      margin-left: 16px;
     }
 
     .tickmarks__list :nth-child(3) {
@@ -192,8 +200,9 @@
   .interest__rate {
 
     margin-top: 43px;
-    padding-top: 22px;
-    padding-bottom: 22px;
+    padding: 22px 20px;
+
+
     background-color: $bg-color;
 
     border-radius: 15px;
@@ -220,7 +229,6 @@
 .period__investment {
   margin-top: 40px;
 
-  // .start__investment {}
 
   .end__investment {
     margin-top: 40px;
@@ -231,124 +239,16 @@
     color: $text-color--secondary;
   }
 
-  .datepicker {
-    width: 100%;
-    margin-top: 10px;
+  // .datepicker {
+  //   width: 100%;
+  //   margin-top: 10px;
 
-    padding: 16px 20px;
+  //   padding: 16px 20px;
 
-    border: 2px solid $border-color;
-    border-radius: 9px;
+  //   border: 2px solid $border-color;
+  //   border-radius: 9px;
 
-    outline: none;
+  //   outline: none;
 
-  }
-}
-
-
-@media screen and (min-width:480px) {
-  .type {
-    .type__select {
-      width: 280px;
-    }
-  }
-
-  .currency {
-    width: 255px;
-  }
-
-  .amount__investment {
-    .input-box {
-      display: flex;
-      justify-content: space-between;
-
-      font-size: 14px;
-
-      .range {
-        display: block;
-        width: 240px;
-      }
-
-      .input {
-        width: 160px;
-      }
-    }
-  }
-
-  .term__investment {
-    w .input-box {
-
-
-      .input {
-        width: 100%;
-        margin-top: 15px;
-      }
-
-      .tickmarks__list {
-        display: flex;
-
-        color: $border-color;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 18px;
-
-      }
-
-      .tickmarks__list :nth-child(2) {
-        margin-left: 20px;
-      }
-
-      .tickmarks__list :nth-child(3) {
-        margin-left: 17px;
-      }
-
-      .tickmarks__list :nth-child(1n+4) {
-        margin-left: 16px;
-
-      }
-
-      .tickmarks__list :nth-child(10) {
-        margin-left: 13px;
-      }
-
-      .tickmarks__list :nth-child(11) {
-        margin-left: 9px;
-      }
-
-      .tickmarks__list :nth-child(12) {
-        margin-left: 9px;
-      }
-
-
-    }
-
-    .interest__rate {
-
-      margin-top: 43px;
-      padding-top: 22px;
-      padding-bottom: 22px;
-      background-color: $bg-color;
-
-      border-radius: 15px;
-
-      text-align: center;
-
-      .rate {
-        margin-top: 10px;
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 28px;
-
-        color: $text-color--main;
-      }
-
-      .span {
-        font-size: 14px;
-        line-height: 16px;
-        color: $text-color--secondary;
-      }
-    }
-  }
-
-
+  // }
 }
