media 960px in progress

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,15 @@
 <article>
   <section class="footer">
+    <ul class="columns">
+      <li class="you__invested">
+        <h2 class="title">You invested</h2>
+        <p class="amount">10000 RUB</p>
+      </li>
+      <li class="you__earn">
+        <h2 class="title">You earn</h2>
+        <p class="amount">9150 RUB</p>
+      </li>
+    </ul>
     <ul class="list">
       <li class="list__item">
         <h2 class="title">Investment</h2>
