--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -13,7 +13,19 @@
     max-width: 640px;
   }
 
+  @media screen and (min-width:960px) {
+    max-width: 960px;
 
+    padding-left: 30px;
+    padding-right: 30px;
 
+  }
 
+  @media screen and (min-width:1200px) {
+    max-width: 1200px;
+  }
+
+  @media screen and (min-width:1920px) {
+    max-width: 1920px;
+  }
 }
