--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -42,11 +42,12 @@
           <input
             class="range js__amount-range"
             value="0"
-            min="1000"
+            min="10000"
             step="100"
             max="50000"
             type="range"
           />
+
           <input class="input js__amount-input" type="text" value="1000" placeholder="0" /><span
             class="input__currency js__currentCurrency"
             >PLN</span
@@ -83,24 +84,10 @@
         <div class="interest__rate">
           <h2 class="title">Interest rate</h2>
           <p class="rate js__rate">
-            <span class="js__interest-rate">0.75%</span> <span class="span">in a day</span>
+            <span class="js__interest-rate">0.75%</span> <span class="span">per month</span>
           </p>
         </div>
       </div>
-      <!-- <div class="period__investment">
-        <div class="start__investment">
-          <label class="title"
-            >Start of investment
-            <input type="text" class="datepicker js__datepicker-start" id="datepicker-start" />
-          </label>
-        </div>
-        <div class="end__investment">
-          <label class="title"
-            >End of investment
-            <input type="text" class="datepicker js__datepicker-end" id="datepicker-end" />
-          </label>
-        </div>
-      </div> -->
     </form>
   </section>
 </article>
