--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,8 +4,105 @@ body {
   font-weight: 500;
   font-size: 18px;
   line-height: 21px;
-
-
-
-
 }
+
+// input[type=range] {
+  //   height: 44px;
+  //   -webkit-appearance: none;
+  //   margin: 10px 0;
+  //   width: 100%;
+  // }
+
+  // input[type=range]:focus {
+  //   outline: none;
+  // }
+
+  // input[type=range]::-webkit-slider-runnable-track {
+  //   width: 100%;
+  //   height: 10px;
+  //   cursor: pointer;
+  //   animate: 0.2s;
+  //   // box-shadow: 0px 0px 0px #FF47ED;
+  //   background: #EEEEEE;
+  //   border-radius: 30px;
+  //   // border: 0px solid #FF1C86;
+  // }
+
+  // input[type=range]::-webkit-slider-thumb {
+  //   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+  //   height: 38px;
+  //   width: 15px;
+  //   border-radius: 3px;
+  //   background: #FFFFFF;
+  //   cursor: pointer;
+  //   -webkit-appearance: none;
+  //   margin-top: -14px;
+  // }
+
+  // input[type=range]:focus::-webkit-slider-runnable-track {
+  //   background: #EEEEEE;
+  // }
+
+  // input[type=range]::-moz-range-track {
+  //   width: 100%;
+  //   height: 10px;
+  //   cursor: pointer;
+  //   animate: 0.2s;
+  //   // box-shadow: 0px 0px 0px #FF47ED;
+  //   background: #EEEEEE;
+  //   border-radius: 30px;
+  //   // border: 0px solid #FF1C86;
+  // }
+
+  // input[type=range]::-moz-range-thumb {
+  //   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+  //   height: 38px;
+  //   width: 15px;
+  //   border-radius: 3px;
+  //   background: #FFFFFF;
+  //   cursor: pointer;
+  //   -webkit-appearance: none;
+  // }
+
+  // input[type=range]::-ms-track {
+  //   width: 100%;
+  //   height: 10px;
+  //   cursor: pointer;
+  //   animate: 0.2s;
+  //   background: transparent;
+  //   border-color: transparent;
+  //   color: transparent;
+  // }
+
+  // input[type=range]::-ms-fill-lower {
+  //   background: #EEEEEE;
+  //   border: 0px solid #FF1C86;
+  //   border-radius: 10px;
+  //   box-shadow: 0px 0px 0px #FF47ED;
+  // }
+
+  // input[type=range]::-ms-fill-upper {
+  //   background: #EEEEEE;
+  //   border: 0px solid #FF1C86;
+  //   border-radius: 10px;
+  //   box-shadow: 0px 0px 0px #FF47ED;
+  // }
+
+  // input[type=range]::-ms-thumb {
+  //   margin-top: 1px;
+  //   box-shadow: 0px 0px 5px #696969;
+  //   border: 0px solid #000000;
+  //   height: 38px;
+  //   width: 15px;
+  //   border-radius: 5px;
+  //   background: #FFFFFF;
+  //   cursor: pointer;
+  // }
+
+  // input[type=range]:focus::-ms-fill-lower {
+  //   background: #EEEEEE;
+  // }
+
+  // input[type=range]:focus::-ms-fill-upper {
+  //   background: #EEEEEE;
+  // }
