--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -48,10 +48,13 @@
             type="range"
           />
 
-          <input class="input js__amount-input" type="text" value="1000" placeholder="0" /><span
-            class="input__currency js__currentCurrency"
-            >PLN</span
-          >
+          <input
+            class="input js__amount-input"
+            type="number"
+            value="10000"
+            placeholder="0"
+            max="50000"
+          /><span class="input__currency js__currentCurrency">PLN</span>
         </div>
       </div>
       <div class="term__investment">
@@ -73,6 +76,7 @@
             <li class="tickmarks__item">4</li>
             <li class="tickmarks__item">5</li>
             <li class="tickmarks__item">6</li>
+            cw
             <li class="tickmarks__item">7</li>
             <li class="tickmarks__item">8</li>
             <li class="tickmarks__item">9</li>
